--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap');
   </style>
+  <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <title>Maria-Nives Portfolio</title>
 </head>
 
