--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap');
   </style>
   <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+  <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <title>Maria-Nives Portfolio</title>
 </head>
 
