--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Personal Portfolio Website created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="google-site-verification" content="google8b54719f0a2c7fe6.html" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
